Update 01 - drumKit project files

--- a/static/styles/01-drumKit.css
+++ b/static/styles/01-drumKit.css
@@ -1,13 +1,54 @@
-body {
-  background: lightskyblue;
+html {
+  font-size: 10px;
+  background: url(../images/01-konata-windows.jpg) 50% 50% no-repeat fixed;
+  background-size: cover;
+}
+body, html {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+.keys {
+  display: flex;
+  flex: 1;
+  min-height: 10vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.keys:nth-of-type(1) {
+  margin-top: 50vh;
 }
 
 .key {
-  transition: all .07s;
+  border: .4rem solid #fbd14b;
+  border-radius: .5rem;
+  margin: 1rem;
+  font-size: 1.5rem;
+  padding: 1rem .5rem;
+  transition: all .08s ease;
+  width: 10rem;
+  text-align: center;
+  color: white;
+  background: rgba(0, 0, 0, .4);
+  text-shadow: 0 0 .5rem black;
 }
 
 .playing {
   transform: scale(1.1);
-  border-color: red;
-  box-shadow: 0 0 10px red;
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
+}
+
+kbd {
+  display: block;
+  font-size: 4rem;
+}
+
+.sound {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+  color: #ffc600;
 }
