--- a/static/styles/01-drumKit.css
+++ b/static/styles/01-drumKit.css
@@ -3,10 +3,12 @@ html {
   background: url(../images/01-konata-windows.jpg) 50% 50% no-repeat fixed;
   background-size: cover;
 }
+
 body, html {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  color: #000;
 }
 
 .keys {
@@ -17,8 +19,8 @@ body, html {
   justify-content: center;
 }
 
-.keys:nth-of-type(1) {
-  margin-top: 50vh;
+.keys:nth-of-type(2) {
+  margin-top: 40vh;
 }
 
 .key {
