--- a/static/styles/00-index.css
+++ b/static/styles/00-index.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Questrial', Arial, sans-serif;
   text-align: center;
-  background: #8EC0E4;
+  background: lightgray;
 }
 
 .big-text {
